--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
+    "@babel/plugin-transform-spread": "^7.7.4",
     "@babel/preset-env": "^7.1.0",
     "babel-preset-minify": "^0.4.3",
     "fetch-mock": "^8.0.0",
